<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="TextView"
        android:id="@+id/activity_rateservant_servantName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/activity_rateservant_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rateServant_rating_FR"
        android:textSize="20sp"
        android:gravity="center"/>

    <RatingBar
        android:id="@+id/activity_rateservant_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5"/>

    <EditText
        android:id="@+id/activity_rateservant_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rateServant_noteComment_FR"/>

    <Button
        android:id="@+id/activity_rateservant_sendNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:textColor="@color/colorWhite"
        android:text="@string/rateServant_sendNote_FR"/>

</LinearLayout>