<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_housedetails_houseFrom"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/activity_housedetails_houseFromAddress"
                android:textAlignment="center"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars"
                android:id="@+id/activity_housedetails_imagesHouse"
                android:layout_margin="10sp"/>
            <TextView
                android:text="@string/houseDetails_instructions_FR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_housedetails_titleInstructions"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:text=""
                android:padding="5dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_housedetails_instructions"/>
            <TextView
                android:text="@string/houseDetails_titlePassage_FR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_housedetails_titlePassage"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:maxLength="500"
                android:hint="@string/houseDetails_descriptionPassage_FR"
                android:id="@+id/activity_housedetails_descriptionPassage" />
            <Button
                android:text="@string/houseDetails_iTakeCareOfTheHouse_FR"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_housedetails_btn_takeCare"
                android:layout_marginTop="20sp"
                android:background="@color/colorPrimary"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:enabled="true"/>
            <TextView
                android:text="@string/houseDetails_instructionsRating_FR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_housedetails_titleRatingBar"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="20sp"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/activity_housedetails_ratingBar"
                android:numStars="5"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20sp"
                android:maxLength="500"
                android:id="@+id/activity_housedetails_noteDescription"
                android:hint="@string/houseDetails_noteComment_FR"/>
            <Button
                android:text="@string/houseDetails_sendNote_FR"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_housedetails_sendNote"
                android:layout_marginTop="20sp"
                android:background="@color/colorPrimary" android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>